syntax = "proto3";
package load_balancer;

service LOAD_BALANCER_SERVICE {
    rpc heartbeat(HEARTBEAT_REQUEST) returns (HEARTBEAT_RESPONSE) {};
    rpc getNextInstance(NEXT_INSTANCE_REQUEST) returns (NEXT_INSTANCE_RESPONSE) {};
}

message HEARTBEAT_REQUEST {
    int32 num_cpu = 1;
    float cpu_clock_speed = 2; // in GHz
    float uptime = 3;
    int32 memory_size = 4; // in MB
    float memory_usage = 5; // in percentage
}

message HEARTBEAT_RESPONSE {
    string message = 1;
    string ip = 2;
    int32 port = 3;
}

message NEXT_INSTANCE_REQUEST {}

message NEXT_INSTANCE_RESPONSE {
    string ip = 1;
    int32 port = 2;
}